Clean project, add .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/aspnetcore,react,visualstudio,visualstudiocode
-# Edit at https://www.toptal.com/developers/gitignore?templates=aspnetcore,react,visualstudio,visualstudiocode
+# Created by https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,aspnetcore
+# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudio,visualstudiocode,aspnetcore
 
 ### ASPNETCore ###
 ## Ignore Visual Studio temporary files, build results, and
@@ -271,21 +271,6 @@ __pycache__/
 # Cake - Uncomment if you are using it
 # tools/
 
-### react ###
-.DS_*
-logs
-**/*.backup.*
-**/*.back.*
-
-node_modules
-bower_components
-
-*.sublime*
-
-psd
-thumb
-sketch
-
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
@@ -554,4 +539,4 @@ FodyWeavers.xsd
 ### VisualStudio Patch ###
 # Additional files built by Visual Studio
 
-# End of https://www.toptal.com/developers/gitignore/api/aspnetcore,react,visualstudio,visualstudiocode
+# End of https://www.toptal.com/developers/gitignore/api/visualstudio,visualstudiocode,aspnetcore
