Update SMTP settings with new email and password

--- a/back/PD421_Dashboard_WEB_API/appsettings.json
+++ b/back/PD421_Dashboard_WEB_API/appsettings.json
@@ -18,7 +18,7 @@
   "SmtpSettings": {
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "Email": "dmytro.potapchuk22@gmail.com",
-    "Password": "fupt neit odsl vibe"
+    "Email": "radon_ak23@nuwm.edu.ua",
+    "Password": "cybf xqrf iovg oeao"
   }
 }
